# TestGit

./: 1.cpp  2.cpp  3.cpp  readme.md  Курсовая работа по ИнфоТех, 4 семестр 1.md
DesktopTestMain/: Main.txt
ProbaDesktop/: NeedToPush.txt  TestRequest.txt
dz1/: CMakeLists.txt  widget.cpp  widget.h  widget.ui  widget.ui.autosave  Отчет_дз1.docx
dz2/: Malyutin_dz2.pro  Start  calculationresultmodel.cpp  calculationresultmodel.h  widget.cpp  widget.h  widget.ui
experiments/: start.md  Этап 1.md
md/: RegExpExercise.md
